# parallel-genetic-timetable

./: .clang-format  .config.ini.example  .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  out  run.sh  run_upc.sh  setup.sh  test-config.ini
.github/workflows/: documentation.yml  doxygen.yml
docs/: Algorithm diagram.drawio.xml  Doxyfile  algorithm_mpi_and_upc.drawio
docs/html/: CLIManager_8hpp.html  CLIManager_8hpp__dep__incl.map  CLIManager_8hpp__dep__incl.md5  CLIManager_8hpp__incl.map  CLIManager_8hpp__incl.md5  CLIManager_8hpp_source.html  Chromosome_8cpp.html  Chromosome_8cpp__incl.map  Chromosome_8cpp__incl.md5  Chromosome_8hpp.html  Chromosome_8hpp__dep__incl.map  Chromosome_8hpp__dep__incl.md5  Chromosome_8hpp__incl.map  Chromosome_8hpp__incl.md5  Chromosome_8hpp_source.html  Class_8cpp.html  Class_8cpp__incl.map  Class_8cpp__incl.md5  Class_8hpp.html  Class_8hpp__dep__incl.map  Class_8hpp__dep__incl.md5  Class_8hpp__incl.map  Class_8hpp__incl.md5  Class_8hpp_source.html  FileManager_8hpp.html  FileManager_8hpp__dep__incl.map  FileManager_8hpp__dep__incl.md5  FileManager_8hpp__incl.map  FileManager_8hpp__incl.md5  FileManager_8hpp_source.html  GeneticAlgorithm_8cpp.html  GeneticAlgorithm_8cpp__incl.map  GeneticAlgorithm_8cpp__incl.md5  GeneticAlgorithm_8hpp.html  GeneticAlgorithm_8hpp__dep__incl.map  GeneticAlgorithm_8hpp__dep__incl.md5  GeneticAlgorithm_8hpp__incl.map  GeneticAlgorithm_8hpp__incl.md5  GeneticAlgorithm_8hpp_source.html  Log_8cpp.html  (+69 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+14 more)
docs/latex/: CLIManager_8hpp.tex  CLIManager_8hpp__dep__incl.md5  CLIManager_8hpp__incl.md5  Chromosome_8cpp.tex  Chromosome_8cpp__incl.md5  Chromosome_8hpp.tex  Chromosome_8hpp__dep__incl.md5  Chromosome_8hpp__incl.md5  Class_8cpp.tex  Class_8cpp__incl.md5  Class_8hpp.tex  Class_8hpp__dep__incl.md5  Class_8hpp__incl.md5  FileManager_8hpp.tex  FileManager_8hpp__dep__incl.md5  FileManager_8hpp__incl.md5  GeneticAlgorithm_8cpp.tex  GeneticAlgorithm_8cpp__incl.md5  GeneticAlgorithm_8hpp.tex  GeneticAlgorithm_8hpp__dep__incl.md5  GeneticAlgorithm_8hpp__incl.md5  Log_8cpp.tex  Log_8cpp__incl.md5  Log_8hpp.tex  Log_8hpp__dep__incl.md5  Log_8hpp__incl.md5  Timetable_8cpp.tex  Timetable_8cpp__incl.md5  Timetable_8hpp.tex  Timetable_8hpp__dep__incl.md5  Timetable_8hpp__incl.md5  annotated.tex  classCLI_1_1Args.tex  classChromosome.tex  classClass.tex  classClass_a61fde5c00d5d8b53186317473095b664_icgraph.dot  classClass_a6f10ac9e1a138781e0b00071d7d134ca_icgraph.dot  classClass_a7142a64f93350cdcadf50ef6dade5f58_icgraph.dot  classClass_a7a4a5761fa9b35dac40c630be772f0c1_cgraph.dot  classClass_a91caa03328dac22c6af12a51c1de5332_cgraph.dot  (+16 more)
include/: CLIManager.hpp  CLIManger.hpp  Chromosome.hpp  Class.hpp  FileManager.hpp  GeneticAlgorithm.hpp  Log.hpp  MPIManager.hpp  MPINode.hpp  Node.hpp  Timetable.hpp  UPCNode.hpp
include/ext/: CMakeLists.txt
sample_data/: test.csv
src/: Chromosome.cpp  Class.cpp  GeneticAlgorithm.cpp  Log.cpp  MPINode.cpp  Node.cpp  Timetable.cpp
